--- a/Blazor.WebForm.Components/Blazor.WebForm.Components.csproj
+++ b/Blazor.WebForm.Components/Blazor.WebForm.Components.csproj
@@ -1,10 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>Blazor.WebForm.Components.pfx</AssemblyOriginatorKeyFile>
-    <Version>1.2.0.2</Version>
+    <Version>1.2.0.3</Version>
     <RootNamespace>asp</RootNamespace>
     <Copyright>Jurio li</Copyright>
     <AssemblyName>Blazor.WebForm.Components</AssemblyName>
@@ -17,8 +17,8 @@
 
   <ItemGroup>
     <PackageReference Include="Applied" Version="1.2.1.6" />
-    <PackageReference Include="Blazor.WebForm.UI" Version="1.2.0.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.10" />
+    <PackageReference Include="Blazor.WebForm.UI" Version="1.2.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.10" />
   </ItemGroup>
 
   <ItemGroup>
